[gd_scene load_steps=3 format=3 uid="uid://dl2vn7tvgui1u"]

[ext_resource type="Script" uid="uid://445yeomo43s0" path="res://scenes/intro_scene.gd" id="1_0y5sa"]
[ext_resource type="FontFile" uid="uid://fvwl7rilu2v8" path="res://fonts/Husky Stash.otf" id="1_xmg1o"]

[node name="IntroScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0y5sa")
metadata/_edit_use_anchors_ = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.0392157, 1)

[node name="IntroText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.568627, 0.301961, 1)
theme_override_colors/font_shadow_color = Color(0.393512, 0.0563787, 0.282851, 1)
theme_override_fonts/font = ExtResource("1_xmg1o")
theme_override_font_sizes/font_size = 95
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="TextTimer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
